Add base-url for github.io linking
Branch: master

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   A collection of git hooks. 
   An attempt to improve commit quality.
   Modular and configurable.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/git-templates" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
