--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,8 +17,9 @@ title: git-templates
 email: avanderw@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A collection of git hooks. 
-  An attempt to improve commit quality.
+  Standardise commit quality.
   Modular and configurable.
+  Reduce overall entropy.
 baseurl: "/git-templates" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
